# mars_calc

./: Cargo.toml  README.md
src/: main.rs
