[package]
name = "mars_calc"
version = "0.1.0"
edition = "2021"
description = "Calculate your weight on Mars - a simple CLI calculator"
authors = ["Daniel Ahn <et3rnal.d@gmail.com>"]
license = "MIT"
repository = "https://github.com/Danny-Devs/mars_calc"
readme = "README.md"
keywords = ["mars", "weight", "calculator", "space", "physics"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "mars_calc"
path = "src/main.rs"

[dependencies]
